--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
   
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,6 +40,6 @@
 
 </div>
 
-    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
